[gd_scene load_steps=22 format=3 uid="uid://unvsttawc0aq"]

[ext_resource type="Script" path="res://Scripts/Screens/main_1.gd" id="1_8lbn4"]
[ext_resource type="Texture2D" uid="uid://co51s4v4m2mli" path="res://Assets/Stages/SNES-Spider-Man-and-Venom-Maximum-Carnage-New-York-Streets-2.png" id="2_ywkie"]
[ext_resource type="Script" path="res://Scripts/UI/camera.gd" id="3_44wx6"]
[ext_resource type="PackedScene" uid="uid://dh1qua8a666tc" path="res://Scenes/Enemies/EnemyA.tscn" id="5_u4g8l"]
[ext_resource type="PackedScene" uid="uid://le8uuuu77tny" path="res://Scenes/UI/UI_Canvas.tscn" id="6_2v7r1"]
[ext_resource type="PackedScene" uid="uid://b03sapmouwjyb" path="res://Scenes/Items/Burger.tscn" id="7_klrbr"]
[ext_resource type="PackedScene" uid="uid://d30cyth32fx7y" path="res://Scenes/Enemies/EnemySpawn.tscn" id="8_dks80"]
[ext_resource type="PackedScene" uid="uid://dwfhvrlimq73w" path="res://Scenes/Items/Barrel.tscn" id="9_mb1gw"]
[ext_resource type="FontFile" uid="uid://cvqdurs0vwgu1" path="res://Assets/lazenby_computer/LazenbyCompSmooth.ttf" id="11_0btde"]
[ext_resource type="PackedScene" uid="uid://cw7iyhvnlkm" path="res://Scenes/Items/Cake.tscn" id="11_ipty8"]
[ext_resource type="Texture2D" uid="uid://bsi3j8oifhelf" path="res://Assets/Sprites/kenney_pixel-ui-pack/Spritesheet/UIpackSheet_transparent.png" id="12_fifag"]
[ext_resource type="PackedScene" uid="uid://6bmfe8g83q4t" path="res://Scenes/Items/Gold.tscn" id="12_tsngl"]

[sub_resource type="PlaneMesh" id="PlaneMesh_3ejri"]
size = Vector2(74.68, 4.75)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_h5n6x"]
data = PackedVector3Array(20, 0, 1, -20, 0, 1, 20, 0, -1, -20, 0, 1, -20, 0, -1, 20, 0, -1)

[sub_resource type="BoxMesh" id="BoxMesh_dau60"]
size = Vector3(70, 1.4, 0.32)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ikqi7"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_hhdpe"]
data = PackedVector3Array(-20, 0.5, 0.03, 20, 0.5, 0.03, -20, -0.5, 0.03, 20, 0.5, 0.03, 20, -0.5, 0.03, -20, -0.5, 0.03, 20, 0.5, -0.03, -20, 0.5, -0.03, 20, -0.5, -0.03, -20, 0.5, -0.03, -20, -0.5, -0.03, 20, -0.5, -0.03, 20, 0.5, 0.03, 20, 0.5, -0.03, 20, -0.5, 0.03, 20, 0.5, -0.03, 20, -0.5, -0.03, 20, -0.5, 0.03, -20, 0.5, -0.03, -20, 0.5, 0.03, -20, -0.5, -0.03, -20, 0.5, 0.03, -20, -0.5, 0.03, -20, -0.5, -0.03, 20, 0.5, 0.03, -20, 0.5, 0.03, 20, 0.5, -0.03, -20, 0.5, 0.03, -20, 0.5, -0.03, 20, 0.5, -0.03, -20, -0.5, 0.03, 20, -0.5, 0.03, -20, -0.5, -0.03, 20, -0.5, 0.03, 20, -0.5, -0.03, -20, -0.5, -0.03)

[sub_resource type="BoxMesh" id="BoxMesh_ak53u"]
size = Vector3(0.1, 1.97, 2.8)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_kpyxp"]
data = PackedVector3Array(-0.05, 0.985, 1.4, 0.05, 0.985, 1.4, -0.05, -0.985, 1.4, 0.05, 0.985, 1.4, 0.05, -0.985, 1.4, -0.05, -0.985, 1.4, 0.05, 0.985, -1.4, -0.05, 0.985, -1.4, 0.05, -0.985, -1.4, -0.05, 0.985, -1.4, -0.05, -0.985, -1.4, 0.05, -0.985, -1.4, 0.05, 0.985, 1.4, 0.05, 0.985, -1.4, 0.05, -0.985, 1.4, 0.05, 0.985, -1.4, 0.05, -0.985, -1.4, 0.05, -0.985, 1.4, -0.05, 0.985, -1.4, -0.05, 0.985, 1.4, -0.05, -0.985, -1.4, -0.05, 0.985, 1.4, -0.05, -0.985, 1.4, -0.05, -0.985, -1.4, 0.05, 0.985, 1.4, -0.05, 0.985, 1.4, 0.05, 0.985, -1.4, -0.05, 0.985, 1.4, -0.05, 0.985, -1.4, 0.05, 0.985, -1.4, -0.05, -0.985, 1.4, 0.05, -0.985, 1.4, -0.05, -0.985, -1.4, 0.05, -0.985, 1.4, 0.05, -0.985, -1.4, -0.05, -0.985, -1.4)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_0ilnt"]
data = PackedVector3Array(-0.05, 0.985, 1.4, 0.05, 0.985, 1.4, -0.05, -0.985, 1.4, 0.05, 0.985, 1.4, 0.05, -0.985, 1.4, -0.05, -0.985, 1.4, 0.05, 0.985, -1.4, -0.05, 0.985, -1.4, 0.05, -0.985, -1.4, -0.05, 0.985, -1.4, -0.05, -0.985, -1.4, 0.05, -0.985, -1.4, 0.05, 0.985, 1.4, 0.05, 0.985, -1.4, 0.05, -0.985, 1.4, 0.05, 0.985, -1.4, 0.05, -0.985, -1.4, 0.05, -0.985, 1.4, -0.05, 0.985, -1.4, -0.05, 0.985, 1.4, -0.05, -0.985, -1.4, -0.05, 0.985, 1.4, -0.05, -0.985, 1.4, -0.05, -0.985, -1.4, 0.05, 0.985, 1.4, -0.05, 0.985, 1.4, 0.05, 0.985, -1.4, -0.05, 0.985, 1.4, -0.05, 0.985, -1.4, 0.05, 0.985, -1.4, -0.05, -0.985, 1.4, 0.05, -0.985, 1.4, -0.05, -0.985, -1.4, 0.05, -0.985, 1.4, 0.05, -0.985, -1.4, -0.05, -0.985, -1.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_nwfos"]
size = Vector3(1.15436, 2.42206, 3.78662)

[node name="Main1" type="Node3D"]
script = ExtResource("1_8lbn4")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.949956, 0.312385, 0, -0.312385, 0.949956, -3.87395, 1.161, 3.551)
projection = 1
size = 2.7
script = ExtResource("3_44wx6")
clamped = 59.195

[node name="SPAWN POINTS" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.285, -0.235)

[node name="SpawnPoint1" type="Marker3D" parent="SPAWN POINTS"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.21749, 0.287056, 1.09067)

[node name="SpawnPoint2" type="Marker3D" parent="SPAWN POINTS"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.98643, 0.465153, 1.6566)

[node name="BACKGROUND" type="Node3D" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="BACKGROUND"]
texture = ExtResource("2_ywkie")
region_enabled = true
region_rect = Rect2(0, 56.5519, 1408, 283.341)

[node name="Sprite3D2" type="Sprite3D" parent="BACKGROUND"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 0)
texture = ExtResource("2_ywkie")
region_enabled = true
region_rect = Rect2(0, 56.5519, 1408, 283.341)

[node name="Sprite3D3" type="Sprite3D" parent="BACKGROUND"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28.0711, 0, 0)
texture = ExtResource("2_ywkie")
region_enabled = true
region_rect = Rect2(0, 56.5519, 1408, 283.341)

[node name="Sprite3D4" type="Sprite3D" parent="BACKGROUND"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 41.2952, 0, 0)
texture = ExtResource("2_ywkie")
region_enabled = true
region_rect = Rect2(0, 56.5519, 1408, 283.341)

[node name="Sprite3D5" type="Sprite3D" parent="BACKGROUND"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 54.9691, 0, 0)
texture = ExtResource("2_ywkie")
region_enabled = true
region_rect = Rect2(0, 56.5519, 1408, 283.341)

[node name="SURFACE" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0306797)
visible = false

[node name="Floor" type="MeshInstance3D" parent="SURFACE"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4072, -0.684559, 1.1771)
mesh = SubResource("PlaneMesh_3ejri")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="SURFACE/Floor"]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="SURFACE/Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_h5n6x")

[node name="Wall1" type="MeshInstance3D" parent="SURFACE"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.804, -0.335104, 2.50006)
mesh = SubResource("BoxMesh_dau60")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="SURFACE/Wall1"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="SURFACE/Wall1/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ikqi7")

[node name="Wall2" type="MeshInstance3D" parent="SURFACE"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.8057, -0.303, -0.122927)
mesh = SubResource("BoxMesh_dau60")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="SURFACE/Wall2"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="SURFACE/Wall2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_hhdpe")

[node name="Wall3" type="MeshInstance3D" parent="SURFACE"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.09275, -0.227952, 0.964336)
mesh = SubResource("BoxMesh_ak53u")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="SURFACE/Wall3"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="SURFACE/Wall3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_kpyxp")

[node name="Wall4" type="MeshInstance3D" parent="SURFACE"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 61.6429, -0.227952, 0.964336)
mesh = SubResource("BoxMesh_ak53u")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="SURFACE/Wall4"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="SURFACE/Wall4/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_0ilnt")

[node name="Barrel" parent="." instance=ExtResource("9_mb1gw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.99813, -0.257351, 0.579296)
collision_mask = 0
drop_object = ExtResource("7_klrbr")

[node name="Barrel2" parent="." instance=ExtResource("9_mb1gw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.71521, -0.257351, 0.579296)
drop_object = ExtResource("12_tsngl")

[node name="Barrel3" parent="." instance=ExtResource("9_mb1gw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.77799, -0.257351, 0.810549)
drop_object = ExtResource("11_ipty8")

[node name="EnemySpawn" parent="." instance=ExtResource("8_dks80")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0.387, 1.435)
enemy_a_amount = 4

[node name="EnemySpawn2" parent="." instance=ExtResource("8_dks80")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0.387, 1.435)
enemy_a_amount = 5

[node name="EnemySpawn3" parent="." instance=ExtResource("8_dks80")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0.387, 1.435)
enemy_a_amount = 7

[node name="EnemySpawn4" parent="." instance=ExtResource("8_dks80")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 0.387, 1.435)
enemy_a_amount = 8

[node name="EnemySpawn5" parent="." instance=ExtResource("8_dks80")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0.387, 1.435)
enemy_a_amount = 7
enemy_b_amount = 1

[node name="EnemySpawn6" parent="." instance=ExtResource("8_dks80")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 38, 0.387, 1.435)
enemy_a_amount = 6
enemy_b_amount = 2

[node name="EnemySpawn7" parent="." instance=ExtResource("8_dks80")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 46, 0.387, 1.435)
enemy_a_amount = 6
enemy_b_amount = 3

[node name="EnemySpawn8" parent="." instance=ExtResource("8_dks80")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 53, 0.387, 1.435)
enemy_a_amount = 3
enemy_b_amount = 4

[node name="NextAreaDoor" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.6892, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="NextAreaDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.20617, 0.234286, 1.39331)
shape = SubResource("BoxShape3D_nwfos")

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="UICanvas" parent="." instance=ExtResource("6_2v7r1")]

[node name="EnemyA" parent="." instance=ExtResource("5_u4g8l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.93185, 0, 1.63361)

[node name="EnemyA2" parent="." instance=ExtResource("5_u4g8l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.05238, 0, 1.63361)

[node name="Next zone" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28.6153, 1.07308, 0.556139)
modulate = Color(0, 0.486275, 1, 1)
text = "construcción"
font = ExtResource("11_0btde")

[node name="Sprite3D" type="Sprite3D" parent="Next zone"]
transform = Transform3D(2.06, 0, 0, 0, 2.06, 0, 0, 0, 2.06, 0.853802, -0.00755739, -0.041194)
texture_filter = 2
texture = ExtResource("12_fifag")
region_enabled = true
region_rect = Rect2(412.862, 467.038, 18.6651, 17.5754)

[connection signal="body_entered" from="NextAreaDoor" to="." method="_on_next_area_door_body_entered"]
